--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Final Proyect</string>
+    <string name="app_name">END TO END</string>
 
     <string-array name="spinner1">
         <item>Conductor</item>
