--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,16 @@
         <item>Ciudad Destino</item>
     </string-array>
 
+    <string-array name="arrayCamioneros">
+        <item>Santiago Amaya Campos</item>
+        <item>Jorge Enrique Carrillo</item>
+        <item>Daniel Polanco Gonzalez</item>
+    </string-array>
+
+    <string-array name="arraySolicitudesCarga">
+        <item>CARGA GENERAL (BOGOTA-MEDELLIN)</item>
+    </string-array>
+
     <string-array name="arrayCiudadOrigen">
         <item>Bogota</item>
         <item>Medellin</item>
